--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <link rel="import" href="/src/AR_Website-app/AR_Website-app.html">
   </head>
+  <style>
+    body {
+      margin: 0;
+    }
+  </style>
   <body>
     <AR_Website-app></AR_Website-app>
   </body>
