Basic routing now working

--- a/src/AR_Website-app/AR_Website-app.html
+++ b/src/AR_Website-app/AR_Website-app.html
@@ -89,7 +89,7 @@
           <!--Landing Page-->
           <div id="landing-page" hidden="[[!landing-active]]">
             <p>This is the landing page</p>
-            <a id="internal-link" href="/articles/test2" on-tap="handleTap">link to first article</a>
+            <a id="internal-link" href="/articles/test" on-tap="handleTap">link to first article</a>
           </div>
           <!--Article Viewer-->
           <div id='content' hidden="[[!article-active]]">
